; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_backtrace.c_pack_backtrace_i.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_backtrace.c_pack_backtrace_i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.backtrace_location = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.backtrace_location*, i8*)* @pack_backtrace_i to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pack_backtrace_i(i32* %0, %struct.backtrace_location* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.backtrace_location*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.backtrace_location**, align 8
  %8 = alloca %struct.backtrace_location*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.backtrace_location* %1, %struct.backtrace_location** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.backtrace_location**
  store %struct.backtrace_location** %10, %struct.backtrace_location*** %7, align 8
  %11 = load %struct.backtrace_location**, %struct.backtrace_location*** %7, align 8
  %12 = load %struct.backtrace_location*, %struct.backtrace_location** %11, align 8
  store %struct.backtrace_location* %12, %struct.backtrace_location** %8, align 8
  %13 = load %struct.backtrace_location*, %struct.backtrace_location** %5, align 8
  %14 = getelementptr inbounds %struct.backtrace_location, %struct.backtrace_location* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  br label %26

18:                                               ; preds = %3
  %19 = load %struct.backtrace_location*, %struct.backtrace_location** %8, align 8
  %20 = load %struct.backtrace_location*, %struct.backtrace_location** %5, align 8
  %21 = bitcast %struct.backtrace_location* %19 to i8*
  %22 = bitcast %struct.backtrace_location* %20 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %21, i8* align 8 %22, i64 8, i1 false)
  %23 = load %struct.backtrace_location*, %struct.backtrace_location** %8, align 8
  %24 = getelementptr inbounds %struct.backtrace_location, %struct.backtrace_location* %23, i64 1
  %25 = load %struct.backtrace_location**, %struct.backtrace_location*** %7, align 8
  store %struct.backtrace_location* %24, %struct.backtrace_location** %25, align 8
  br label %26

26:                                               ; preds = %18, %17
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
